# bootcamp_python_aula_06

./: .flake8  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
