[tool.poetry]
name = "bootcamp-python-aula-06"
version = "0.1.0"
description = ""
authors = ["Victor Almeida <vrodrigoleite@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = """
isort main.py
black main.py
flake8 main.py
"""
